Adicionando script do Analytics

--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
         <footer>© 2024 Kadosh Tech</footer>
     </div>
 
+<script defer src="/_vercel/insights/script.js"></script>
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+
 </body>
 </html>
